--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@vue/eslint-config-typescript": "^9.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "sass": "^1.49.10",
+    "sass-loader": "^12.6.0",
     "typescript": "~4.5.5"
   },
   "eslintConfig": {
